--- a/css/nav.css
+++ b/css/nav.css
@@ -1,12 +1,27 @@
-header.header1{background:#ffffff;box-shadow: 0px 5px 5px #888888;}
+*{margin:0px;padding:0px;}
+html{margin-right: calc(100% - 100vw);}
+body{background:#f5f5f5;overflow-x: hidden;/*overflow-y: scroll;overflow-y: overlay;*/}
+a{text-decoration: none;}
+a:link{color:black}
+a:visited{color:black}
+a:hover{color:black}
+a:active{color:black}
+
+
+header.header1{background:#ffffff;box-shadow: 0px 2px 5px #888888;}
 
 
 header.header1 nav{width:61.8%;margin:0 auto;}
 
 header.header1 figure{display: inline-block;}
 header.header1 figure img{height:128px;}
-header.header1 figure figcaption{text-align: center;}
+header.header1 figure figcaption{text-align: center;color:#808b91;line-height: 50px;font-size: 1.5em;}
 
 header.header1 nav ul{display: inline-block;margin-left:10%}
-header.header1 nav li{display: inline-block;list-style: none;width:100px;line-height:61.8px;text-align: center;border-radius: 50%;}
+header.header1 nav li{display: inline-block;list-style: none;text-align: center;border-radius: 50%;}
 header.header1 nav li:hover{background:#99CCFF;cursor:pointer;}
+header.header1 nav li a{display: block;width:100px;line-height:61.8px;}
+
+
+div.container{width:61.8%;margin:0 auto;}
+div.container main{width:75%;float: left;margin-top:2%;overflow: hidden;}
