--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 
-div.top{width:50px;height:50px;position: fixed;right:20px;bottom:20px;z-index: 1;}
+div.top{width:50px;height:50px;position: fixed;right:50px;bottom:20px;z-index: 1;margin-right: calc(100% - 100vw);}
 
-footer{text-align: center;margin-top:50px;position: relative;;bottom: 0px;width:100%;line-height: 1.5;color:#666;font-size: 0.9em;}
+footer{text-align: center;margin-top:50px;width:100%;line-height: 1.5;color:#666;font-size: 0.9em;}
 footer p{margin:10px}
