第一次修改viewport以适应移动设备

--- a/css/aside.css
+++ b/css/aside.css
@@ -1,3 +1,4 @@
+@media (min-width: 980px){
 div.container aside{width:23%;float:right;margin-top:4%;}
 div.container aside div{margin-top:10px}
 div.container aside div.hot{background: #ffffff;padding:10px;border-radius: 10px;}
@@ -8,3 +9,8 @@ div.container aside img{width:100%}
 div.container aside div.tag{background: #ffffff;padding:10px;border-radius: 10px;line-height: 2.5;}
 div.container aside div.tag h4{margin-bottom:10px;}
 div.container aside div.tag a{border-radius: 50%;background:#cfdadd;color:#ffffff;margin:5px;padding:5px;font-size: .5em;}
+}
+
+@media (min-width: 375px) and (max-width:500px){
+    div.container aside{display: none}
+}
